feat(go-live): l'agent no respon fins que SUPER_ADMIN activa el tenant explícitament
L'agent ignora missatges entrants (WhatsApp, widget, email) si activePhases
no conté F1. Nou endpoint POST /tenants/{id}/go-live copia contractedPhases →
activePhases; POST /tenants/{id}/suspend el deixa buit. V65 migra tenants
existents. Pàgina d'activació mostra estat "En Marxa" i el botó per activar.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>